fix a bug in the release workflow

--- a/.github/workflows/grapl-release.yml
+++ b/.github/workflows/grapl-release.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Determine release channel
         run: |
           BRANCH=${{ github.event.release.target_commitish }}
-          if [[ "$BRANCH"="master" ]]; then
+          if [[ "$BRANCH" == "master" ]]; then
               CHANNEL="latest"
           else
               CHANNEL="beta"
