run lints and builds on the staging branch

--- a/.github/workflows/grapl-build.yml
+++ b/.github/workflows/grapl-build.yml
@@ -3,6 +3,9 @@ name: Grapl Build
 on:
   pull_request:
     types: [opened, edited, reopened]
+    branches:
+      - staging
+      - master
 
 jobs:
   grapl-build:
