--- a/.github/workflows/grapl-lint.yml
+++ b/.github/workflows/grapl-lint.yml
@@ -3,6 +3,9 @@ name: Grapl Lint
 on:
   pull_request:
     types: [opened, edited, reopened]
+    branches:
+      - staging
+      - master
 
 jobs:
   rust-lint:
