listen to synchronized events instead of edited

--- a/.github/workflows/grapl-build.yml
+++ b/.github/workflows/grapl-build.yml
@@ -2,7 +2,7 @@ name: Grapl Build
 
 on:
   pull_request:
-    types: [opened, edited, reopened]
+    types: [opened, synchronized, reopened]
     branches:
       - staging
       - master
