set the working-directory before attempting cargo audit

--- a/.github/workflows/grapl-build.yml
+++ b/.github/workflows/grapl-build.yml
@@ -16,6 +16,7 @@ jobs:
 
       - name: Cargo Audit
         uses: actions-rs/audit-check@v1
+        working-directory: src/rust
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
 
