apparently working-directory does not work with uses

--- a/.github/workflows/grapl-build.yml
+++ b/.github/workflows/grapl-build.yml
@@ -14,11 +14,18 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - name: cd src/rust
+        run: |
+          cd src/rust
+
       - name: Cargo Audit
         uses: actions-rs/audit-check@v1
-        working-directory: ./src/rust
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: cd ../..
+        run: |
+          cd ../..
 
       - name: Build Grapl
         run: |
