Valid emails for PyPI (#97)
* valid emails for PyPI

* update grapl-build and grapl-lint workflows to run on PR updates, run cargo update

* run lints and builds on the staging branch

* listen to synchronized events instead of edited

* set the working-directory before attempting cargo audit

* synchronize, not synchronized >_<

* update working-directory

* apparently working-directory does not work with uses

* make cargo audit actually work

* make cargo audit its own job s.t. it shows up as a separate check

* attempt to fix the grapl-cargo-audit job

--- a/.github/workflows/grapl-lint.yml
+++ b/.github/workflows/grapl-lint.yml
@@ -1,8 +1,11 @@
 name: Grapl Lint
 
 on:
-  check_run:
-    types: [created, rerequested]
+  pull_request:
+    types: [opened, synchronize, reopened]
+    branches:
+      - staging
+      - master
 
 jobs:
   rust-lint:
