--- a/.github/workflows/grapl-release.yml
+++ b/.github/workflows/grapl-release.yml
@@ -8,8 +8,18 @@ jobs:
   release:
     runs-on: ubuntu-latest
 
+    strategy:
+        matrix:
+          python-version: [3.7]
+
     steps:
+
       - uses: actions/checkout@v2
+
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python-version }}
 
       - name: Configure git
         run: |
