Check whether versions need to be bumped before building (#104)
* python3

* configure python correctly

* WIP so close

* exclude yanked packages

* some updates and fixes

--- a/.github/workflows/grapl-release.yml
+++ b/.github/workflows/grapl-release.yml
@@ -21,37 +21,6 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: Configure git
-        run: |
-          git config --global user.name 'Grapl CI'
-          git config --global user.email 'grapl.code@graplsecurity.com'
-
-      - name: Install bump2version CLI
-        run: |
-          python3 -mvenv venv && . venv/bin/activate
-          pip install bump2version
-          deactivate
-
-      - name: Bump grapl_graph_descriptions version
-        run: |
-          . venv/bin/activate
-          cd src/rust/graph-descriptions
-          bump2version --no-tag patch
-          cd ../../..
-          deactivate
-
-      - name: Bump grapl_analyzerlib version
-        run: |
-          . venv/bin/activate
-          cd src/python/grapl_analyzerlib
-          bump2version --no-tag patch
-          cd ../../..
-          deactivate
-
-      - name: Push version bumps
-        run: |
-          git push
-
       - name: Determine release channel
         run: |
           BRANCH=${{ github.event.release.target_commitish }}
@@ -61,6 +30,42 @@ jobs:
               CHANNEL="beta"
           fi
           echo "::set-env name=CHANNEL::$CHANNEL"
+
+      - name: Install pypi-simple
+        run: |
+          python3 -mvenv venv && . venv/bin/activate
+          pip install pypi-simple
+          deactivate
+
+      - name: Check whether grapl_graph_descriptions version has been bumped
+        run: |
+          . venv/bin/activate
+          if [[ "$CHANNEL" == "latest" ]]; then
+              python etc/build_scripts/check_pypi_version.py \
+                grapl_graph_descriptions \
+                $(cat src/rust/graph-descriptions/VERSION)
+          else
+              python etc/build_scripts/check_pypi_version.py \
+                grapl_graph_descriptions \
+                $(cat src/rust/graph-descriptions/VERSION) \
+                true
+          fi
+          deactivate
+
+      - name: Check whether grapl_analyzerlib version has been bumped
+        run: |
+          . venv/bin/activate
+          if [[ "$CHANNEL" == "latest" ]]; then
+              python etc/build_scripts/check_pypi_version.py \
+                grapl_analyzerlib \
+                $(cat src/python/grapl_analyzerlib/VERSION)
+          else
+              python etc/build_scripts/check_pypi_version.py \
+                grapl_analyzerlib \
+                $(cat src/python/grapl_analyzerlib/VERSION) \
+                true
+          fi
+          deactivate
 
       - name: Build Grapl
         env:
