--- a/src/js/graphql_endpoint/Dockerfile
+++ b/src/js/graphql_endpoint/Dockerfile
@@ -1,20 +1,17 @@
-FROM node:alpine3.10 AS grapl-graphql-endpoint-deps
+FROM node:12.18-buster-slim AS grapl-graphql-endpoint-deps
 WORKDIR /lambda
 
-RUN apk add python
-RUN apk add --update alpine-sdk
-RUN apk add libffi-dev openssl-dev
-RUN apk --no-cache --update add build-base
+RUN apt-get update && apt-get -y upgrade && apt-get install -y --no-install-recommends build-essential libffi-dev libssl-dev python3
 
 COPY package.json .
 COPY package-lock.json .
 
 RUN npm i
 
-FROM node:alpine3.10 AS grapl-graphql-endpoint-build
+FROM node:12.18-buster-slim AS grapl-graphql-endpoint-build
 WORKDIR /lambda
 COPY --from=grapl-graphql-endpoint-deps /lambda/node_modules node_modules/
-RUN apk upgrade && apk add zip
+RUN apt-get update && apt-get -y upgrade && apt-get install -y --no-install-recommends zip
 
 RUN rm -rf node_modules/grpc/build/
 RUN mkdir -p /lambda/modules/
@@ -23,7 +20,7 @@ COPY modules/* ./modules/
 COPY server.js .
 RUN zip --quiet -9r /lambda.zip .
 
-FROM node:alpine3.10 AS grapl-graphql-endpoint
-RUN apk add --no-cache zip
+FROM node:12.18-buster-slim AS grapl-graphql-endpoint
+RUN apt-get update && apt-get -y upgrade && apt-get install -y --no-install-recommends unzip
 COPY --from=grapl-graphql-endpoint-build /lambda.zip /
 RUN unzip -q lambda.zip
