--- a/src/python/grapl-model-plugin-deployer/Dockerfile
+++ b/src/python/grapl-model-plugin-deployer/Dockerfile
@@ -4,7 +4,7 @@ WORKDIR /home/grapl
 COPY --chown=grapl . grapl-model-plugin-deployer
 COPY --from=grapl/grapl-analyzerlib-python-build /home/grapl/venv venv
 # RUN python setup.py test
-RUN source venv/bin/activate && cd grapl-model-plugin-deployer && pip install .
+RUN /bin/bash -c "source venv/bin/activate && cd grapl-model-plugin-deployer && pip install ."
 RUN zip --quiet -9r lambda.zip venv/lib/python3.7/site-packages/
 RUN zip -g lambda.zip grapl-model-plugin-deployer/src/grapl_model_plugin_deployer.py
 
@@ -13,5 +13,5 @@ USER grapl
 WORKDIR /home/grapl
 COPY --from=grapl-model-plugin-deployer-build /home/grapl/lambda.zip lambda.zip
 COPY --from=grapl-model-plugin-deployer-build /home/grapl/venv venv
-RUN source venv/bin/activate && chalice new-project app/
+RUN /bin/bash -c "source venv/bin/activate && chalice new-project app/"
 COPY --from=grapl-model-plugin-deployer-build /home/grapl/grapl-model-plugin-deployer/src/grapl_model_plugin_deployer.py app/app.py
