--- a/src/python/grapl_analyzerlib/Dockerfile
+++ b/src/python/grapl_analyzerlib/Dockerfile
@@ -3,5 +3,5 @@ USER grapl
 WORKDIR /home/grapl
 COPY --chown=grapl . grapl_analyzerlib
 COPY --from=grapl/grapl-graph-descriptions-python-build /home/grapl/venv venv
-RUN source venv/bin/activate && cd grapl_analyzerlib && pip install .
-RUN source venv/bin/activate && cd grapl_analyzerlib && python setup.py sdist bdist_wheel
+RUN /bin/bash -c "source venv/bin/activate && cd grapl_analyzerlib && pip install ."
+RUN /bin/bash -c "source venv/bin/activate && cd grapl_analyzerlib && python setup.py sdist bdist_wheel"
