--- a/src/rust/graph-descriptions/Dockerfile
+++ b/src/rust/graph-descriptions/Dockerfile
@@ -3,5 +3,5 @@ USER grapl
 WORKDIR /home/grapl
 COPY --chown=grapl . graph-descriptions
 COPY --from=grapl/grapl-python-build /home/grapl/venv venv
-RUN source venv/bin/activate && cd graph-descriptions && pip install .
-RUN source venv/bin/activate && cd graph-descriptions && python setup.py sdist bdist_wheel
+RUN /bin/bash -c "source venv/bin/activate && cd graph-descriptions && pip install ."
+RUN /bin/bash -c "source venv/bin/activate && cd graph-descriptions && python setup.py sdist bdist_wheel"
