--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,9 +49,9 @@ services:
       - "BUCKET_PREFIX=local-grapl"
       - "IS_LOCAL=True"
       - GRAPL_LOG_LEVEL=${GRAPL_LOG_LEVEL:-ERROR}
-      - "QUEUE_URL=http://sqs.us-east-1.amazonaws.com:9324/queue/sysmon-graph-generator-queue"
-      - "SYSMON_GRAPH_GENERATOR_QUEUE_URL=http://sqs.us-east-1.amazonaws.com:9324/queue/sysmon-graph-generator-queue"
-      - "NODE_IDENTIFIER_QUEUE_URL=http://sqs.us-east-1.amazonaws.com:9324/queue/node-identifier-queue"
+      - "QUEUE_URL=http://sqs.us-east-1.amazonaws.com:9324/queue/grapl-sysmon-graph-generator-queue"
+      - "SYSMON_GRAPH_GENERATOR_QUEUE_URL=http://sqs.us-east-1.amazonaws.com:9324/queue/grapl-sysmon-graph-generator-queue"
+      - "NODE_IDENTIFIER_QUEUE_URL=http://sqs.us-east-1.amazonaws.com:9324/queue/grapl-node-identifier-queue"
     links:
       - s3:minio
       - sqs:sqs.us-east-1.amazonaws.com
@@ -70,8 +70,8 @@ services:
       - "BUCKET_PREFIX=local-grapl"
       - "IS_LOCAL=True"
       - GRAPL_LOG_LEVEL=${GRAPL_LOG_LEVEL:-ERROR}
-      - "NODE_IDENTIFIER_QUEUE_URL=http://sqs.us-east-1.amazonaws.com:9324/queue/node-identifier-queue"
-      - "GRAPH_MERGER_QUEUE_URL=http://sqs.us-east-1.amazonaws.com:9324/queue/graph-merger-queue"
+      - "NODE_IDENTIFIER_QUEUE_URL=http://sqs.us-east-1.amazonaws.com:9324/queue/grapl-node-identifier-queue"
+      - "GRAPH_MERGER_QUEUE_URL=http://sqs.us-east-1.amazonaws.com:9324/queue/grapl-graph-merger-queue"
     tty: false
     links:
       - s3:minio
@@ -93,8 +93,8 @@ services:
       - "BUCKET_PREFIX=local-grapl"
       - "IS_LOCAL=True"
       - GRAPL_LOG_LEVEL=${GRAPL_LOG_LEVEL:-ERROR}
-      - "NODE_IDENTIFIER_RETRY_QUEUE_URL=http://sqs.us-east-1.amazonaws.com:9324/queue/node-identifier-retry-queue"
-      - "GRAPH_MERGER_QUEUE_URL=http://sqs.us-east-1.amazonaws.com:9324/queue/graph-merger-queue"
+      - "NODE_IDENTIFIER_RETRY_QUEUE_URL=http://sqs.us-east-1.amazonaws.com:9324/queue/grapl-node-identifier-retry-queue"
+      - "GRAPH_MERGER_QUEUE_URL=http://sqs.us-east-1.amazonaws.com:9324/queue/grapl-graph-merger-queue"
     tty: false
     links:
       - s3:minio
@@ -116,8 +116,8 @@ services:
       - "BUCKET_PREFIX=local-grapl"
       - "IS_LOCAL=True"
       - GRAPL_LOG_LEVEL=${GRAPL_LOG_LEVEL:-ERROR}
-      - "GRAPH_MERGER_QUEUE_URL=http://sqs.us-east-1.amazonaws.com:9324/queue/graph-merger-queue"
-      - "ANALYZER_DISPATCHER_QUEUE_URL=http://sqs.us-east-1.amazonaws.com:9324/queue/analyzer-dispatcher-queue"
+      - "SOURCE_QUEUE_URL=http://sqs.us-east-1.amazonaws.com:9324/queue/grapl-graph-merger-queue"
+      - "ANALYZER_DISPATCHER_QUEUE_URL=http://sqs.us-east-1.amazonaws.com:9324/queue/grapl-analyzer-dispatcher-queue"
     tty: false
     links:
       - s3:minio
@@ -139,8 +139,8 @@ services:
       - "BUCKET_PREFIX=local-grapl"
       - "IS_LOCAL=True"
       - GRAPL_LOG_LEVEL=${GRAPL_LOG_LEVEL:-ERROR}
-      - "ANALYZER_DISPATCHER_QUEUE_URL=http://sqs.us-east-1.amazonaws.com:9324/queue/analyzer-dispatcher-queue"
-      - "ANALYZER_EXECUTOR_QUEUE_URL=http://sqs.us-east-1.amazonaws.com:9324/queue/analyzer-executor-queue"
+      - "ANALYZER_DISPATCHER_QUEUE_URL=http://sqs.us-east-1.amazonaws.com:9324/queue/grapl-analyzer-dispatcher-queue"
+      - "ANALYZER_EXECUTOR_QUEUE_URL=http://sqs.us-east-1.amazonaws.com:9324/queue/grapl-analyzer-executor-queue"
     tty: false
     links:
       - s3:minio
@@ -167,7 +167,7 @@ services:
       - "IS_RETRY=False"
       - "BUCKET_PREFIX=local-grapl"
       - GRAPL_LOG_LEVEL=${GRAPL_LOG_LEVEL:-ERROR}
-      - "ANALYZER_EXECUTOR_QUEUE_URL=http://sqs.us-east-1.amazonaws.com:9324/queue/analyzer-executor-queue"
+      - "ANALYZER_EXECUTOR_QUEUE_URL=http://sqs.us-east-1.amazonaws.com:9324/queue/grapl-analyzer-executor-queue"
     links:
       - s3:minio
       - sqs:sqs.us-east-1.amazonaws.com
