--- a/src/rust/generic-subgraph-generator/Cargo.toml
+++ b/src/rust/generic-subgraph-generator/Cargo.toml
@@ -10,6 +10,7 @@ graph-descriptions = {package="grapl-graph-descriptions", path="../graph-descrip
 grapl-config = {path="../grapl-config", version="*"}
 
 sqs-lambda = "0.20.*"
+#sqs-lambda = "0.20.*"
 
 serde = "1.0.110"
 serde_json = "1.0.53"
