--- a/src/rust/generic-subgraph-generator/Cargo.toml
+++ b/src/rust/generic-subgraph-generator/Cargo.toml
@@ -10,7 +10,6 @@ graph-descriptions = {package="grapl-graph-descriptions", path="../graph-descrip
 grapl-config = {path="../grapl-config", version="*"}
 
 sqs-lambda = "0.20.*"
-#sqs-lambda = "0.20.*"
 
 serde = "1.0.110"
 serde_json = "1.0.53"
@@ -42,6 +41,10 @@ zstd = "0.5.1"
 tokio = { version = "0.2.4", features = ["sync", "rt-core", "macros", "time", "rt-threaded"] }
 
 tokio-compat = "0.1.2"
+tracing = "0.1.15"
+tracing-futures = "0.2.4"
+tracing-subscriber = "0.2.5"
+eyre = "0.4.3"
 #openssl-probe = "0.1.2"
 
 
