--- a/src/rust/graph-generator-lib/Cargo.toml
+++ b/src/rust/graph-generator-lib/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Insanitybit <insanitybit@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-graph-descriptions = {package="grapl-graph-descriptions", path="../graph-descriptions", version="*"}
+graph-descriptions = {package="grapl-graph-descriptions", version="*"}
 
 failure = "0.1.*"
 
@@ -13,7 +13,7 @@ sha2 = "0.7.1"
 rusoto_s3 = { version="0.43.0", default_features = false, features=["rustls"] }
 rusoto_core = { version="0.43.0", default_features = false, features=["rustls"] }
 rusoto_sqs = { version="0.43.0", default_features = false, features=["rustls"] }
-grapl-config = {path="../grapl-config", version="*"}
+grapl-config = { version="*" }
 
 base64 = "0.9.2"
 prost = "0.6.*"
