Add license and description

--- a/src/rust/grapl-config/Cargo.toml
+++ b/src/rust/grapl-config/Cargo.toml
@@ -3,7 +3,8 @@ name = "grapl-config"
 version = "0.0.1"
 authors = ["Insanitybit <insanitybit@gmail.com>"]
 edition = "2018"
-
+description = "Config and utility library for Grapl services"
+license = "APACHE 2.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
