--- a/src/rust/graph-generator-lib/Cargo.toml
+++ b/src/rust/graph-generator-lib/Cargo.toml
@@ -3,6 +3,8 @@ name = "graph-generator-lib"
 version = "0.1.8"
 authors = ["Insanitybit <insanitybit@gmail.com>"]
 edition = "2018"
+description = "Library for writing Grapl generator services"
+license = "Apache-2.0"
 
 [dependencies]
 graph-descriptions = {package="grapl-graph-descriptions", version="*"}
