--- a/src/rust/graph-generator-lib/Cargo.toml
+++ b/src/rust/graph-generator-lib/Cargo.toml
@@ -7,7 +7,7 @@ description = "Library for writing Grapl generator services"
 license = "Apache-2.0"
 
 [dependencies]
-graph-descriptions = {package="grapl-graph-descriptions", version="0.2.10"}
+graph-descriptions = {package="grapl-graph-descriptions", path="../graph-descriptions", version="0.2.*"}
 
 failure = "0.1.*"
 
@@ -15,7 +15,7 @@ sha2 = "0.7.1"
 rusoto_s3 = { version="0.43.0", default_features = false, features=["rustls"] }
 rusoto_core = { version="0.43.0", default_features = false, features=["rustls"] }
 rusoto_sqs = { version="0.43.0", default_features = false, features=["rustls"] }
-grapl-config = { version="0.0.1" }
+grapl-config = { path="../grapl-config", version="0.0.*" }
 
 base64 = "0.9.2"
 prost = "0.6.*"
