able to upload & delete plugins with UX changes

--- a/src/js/engagement_view/tsconfig.json
+++ b/src/js/engagement_view/tsconfig.json
@@ -11,6 +11,7 @@
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "strict": true,
+    "downlevelIteration": true,
     "noImplicitAny": true,
     "forceConsistentCasingInFileNames": true,
     "module": "esnext",
