Attach reverse edges in DGraph (#114)
* implement reverse edges

* some bug fixes

* remove unused local

* remove some more engagement graph stuff

* add some debug logging

* Set up reverse edges, remove types

* fix logging

* put EngagementClient and EngagementView back in

* update for review comments

Co-authored-by: colin-grapl <62314572+colin-grapl@users.noreply.github.com>
Co-authored-by: colin <colin@graplsecurity.com>

--- a/src/js/graphql_endpoint/Dockerfile
+++ b/src/js/graphql_endpoint/Dockerfile
@@ -24,3 +24,5 @@ FROM node:12.18-buster-slim AS grapl-graphql-endpoint
 RUN apt-get update && apt-get -y upgrade && apt-get install -y --no-install-recommends unzip
 COPY --from=grapl-graphql-endpoint-build /lambda.zip /
 RUN unzip -q lambda.zip
+COPY --from=grapl-graphql-endpoint-deps /lambda/package.json /package.json
+COPY --from=grapl-graphql-endpoint-deps /lambda/package-lock.json /package-lock.json
