--- a/src/rust/graph-generator-lib/Cargo.toml
+++ b/src/rust/graph-generator-lib/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "graph-generator-lib"
-version = "0.1.8"
+version = "0.1.9"
 authors = ["Insanitybit <insanitybit@gmail.com>"]
 edition = "2018"
 description = "Library for writing Grapl generator services"
@@ -15,6 +15,7 @@ sha2 = "0.7.1"
 rusoto_s3 = { version="0.43.0", default_features = false, features=["rustls"] }
 rusoto_core = { version="0.43.0", default_features = false, features=["rustls"] }
 rusoto_sqs = { version="0.43.0", default_features = false, features=["rustls"] }
+rusoto_sts =  { version="0.43.0", default_features = false, features=["rustls"] }
 grapl-config = { path="../grapl-config", version="0.0.*" }
 
 base64 = "0.9.2"
