--- a/src/python/grapl-dgraph-ttl/Dockerfile
+++ b/src/python/grapl-dgraph-ttl/Dockerfile
@@ -4,8 +4,8 @@ WORKDIR /home/grapl
 COPY --chown=grapl . ./grapl-dgraph-ttl
 COPY --from=grapl/grapl-analyzerlib-python-build /home/grapl/venv venv
 RUN /bin/bash -c "source venv/bin/activate && pip install -r grapl-dgraph-ttl/requirements.txt"
-RUN zip --quiet -9r lambda.zip venv/lib/python3.7/site-packages/
-RUN zip -g lambda.zip grapl-dgraph-ttl/app.py
+RUN cd venv/lib/python3.7/site-packages && zip --quiet -9r ../../../../lambda.zip .
+RUN cd grapl-dgraph-ttl && zip -g ../lambda.zip app.py
 
 FROM grapl/grapl-python-deploy AS grapl-dgraph-ttl
 USER grapl
