--- a/src/js/grapl-cdk/package.json
+++ b/src/js/grapl-cdk/package.json
@@ -44,6 +44,7 @@
         "@aws-cdk/core": "1.41.x",
         "@types/node-dir": "0.0.33",
         "aws-sdk": "2.682.x",
+        "cdk-watchful": "0.5.x",
         "node-dir": "0.1.17",
         "node-env-file": "0.1.8",
         "source-map-support": "0.5.19"
