--- a/src/js/engagement_view/package.json
+++ b/src/js/engagement_view/package.json
@@ -12,19 +12,21 @@
     "@trendmicro/react-sidenav": "^0.5.0",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.12.34",
-    "@types/react-dom": "^16.9.6",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-router": "^5.1.8",
     "@types/react-router-dom": "^5.1.3",
     "@types/react-sidebar": "^3.0.0",
     "d3": "^5.15.1",
     "debug": "^2.6.9",
     "formik": "^2.1.4",
     "gulp": "^4.0.2",
+    "history": "^5.0.0",
     "minimist": "^1.2.3",
     "prettier": "2.0.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-force-graph": "^1.32.1",
-    "react-router-dom": "^5.1.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.0",
     "semantic-ui-react": "^0.88.2",
     "typescript": "~3.7.2"
