--- a/src/js/grapl-plugin-cdk-deployer/analyzer-cdk/package.json
+++ b/src/js/grapl-plugin-cdk-deployer/analyzer-cdk/package.json
@@ -5,12 +5,12 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "adm-zip": "^0.4.16",
-    "aws-sdk": "^2.706.0"
+    "@aws-cdk/aws-ec2": "^1.47.0",
+    "@aws-cdk/aws-lambda": "^1.47.0",
+    "@aws-cdk/aws-s3": "^1.47.0",
+    "@aws-cdk/aws-sns": "^1.47.0"
   },
   "devDependencies": {
-    "@types/adm-zip": "^0.4.33",
-    "@types/node": "^14.0.14",
     "@typescript-eslint/eslint-plugin": "^3.3.0",
     "@typescript-eslint/parser": "^3.3.0",
     "eslint": "7.2.0",
