--- a/src/rust/graph-merger/Cargo.toml
+++ b/src/rust/graph-merger/Cargo.toml
@@ -16,7 +16,7 @@ log = "0.4.*"
 
 dgraph-rs = "0.2.*"
 grpc = "0.6.1"
-sqs-lambda = "0.20.19"
+sqs-lambda = "0.20.*"
 
 rusoto_s3 = { version="0.43.0", default_features = false, features=["rustls"] }
 rusoto_core = { version="0.43.0", default_features = false, features=["rustls"] }
