--- a/src/rust/analyzer-dispatcher/Cargo.toml
+++ b/src/rust/analyzer-dispatcher/Cargo.toml
@@ -34,8 +34,8 @@ stopwatch = "0.0.7"
 lambda_runtime = "0.2.*"
 async-trait = "0.1.22"
 zstd = "0.5.1"
-tokio-compat = "0.1.2"
-tokio = { version = "0.2.4", features = ["sync", "rt-core", "macros", "time", "rt-threaded"] }
+tokio-compat = "0.1.*"
+tokio = { version = "0.2.*", features = ["sync", "rt-core", "macros", "time", "rt-threaded"] }
 chrono = "0.4.11"
 rusoto_credential = "0.43.0"
 sqs-lambda = "0.20.*"
