--- a/src/rust/generic-subgraph-generator/Cargo.toml
+++ b/src/rust/generic-subgraph-generator/Cargo.toml
@@ -38,9 +38,9 @@ simple_logger = "1.6.*"
 lambda_runtime = "0.2.*"
 async-trait = "0.1.22"
 zstd = "0.5.1"
-tokio = { version = "0.2.4", features = ["sync", "rt-core", "macros", "time", "rt-threaded"] }
+tokio = { version = "0.2.*", features = ["sync", "rt-core", "macros", "time", "rt-threaded"] }
 
-tokio-compat = "0.1.2"
+tokio-compat = "0.1.*"
 tracing = "0.1.15"
 tracing-futures = "0.2.4"
 tracing-subscriber = "0.2.5"
