--- a/src/rust/sysmon-subgraph-generator/Cargo.toml
+++ b/src/rust/sysmon-subgraph-generator/Cargo.toml
@@ -33,8 +33,8 @@ simple_logger = "1.6.*"
 lambda_runtime = "0.2.*"
 async-trait = "0.1.31"
 zstd = "0.5.1"
-tokio-compat = "0.1.2"
-tokio = { version = "0.2.4", features = ["sync", "rt-core", "macros", "time", "rt-threaded"] }
+tokio-compat = "0.1.*"
+tokio = { version = "0.2.*", features = ["sync", "rt-core", "macros", "time", "rt-threaded"] }
 rusoto_credential = "0.43.0"
 graph-generator-lib = { path="../graph-generator-lib", version="*"}
 tracing = "0.1.15"
