--- a/src/rust/graph-generator-lib/Cargo.toml
+++ b/src/rust/graph-generator-lib/Cargo.toml
@@ -30,6 +30,6 @@ sqs-lambda = "0.20.*"
 lambda_runtime = "0.2.1"
 chrono = "0.4.11"
 serde = "1.0.110"
-tokio-compat = "0.1.6"
+tokio-compat = "0.1.*"
 rusoto_credential = "0.43.0"
-tokio = "0.2.21"
+tokio = "0.2.*"
