--- a/src/python/grapl-dgraph-ttl/Dockerfile
+++ b/src/python/grapl-dgraph-ttl/Dockerfile
@@ -6,6 +6,7 @@ COPY --from=grapl/grapl-analyzerlib-python-build /home/grapl/venv venv
 RUN /bin/bash -c "source venv/bin/activate && pip install -r grapl-dgraph-ttl/requirements.txt"
 RUN cd venv/lib/python3.7/site-packages && zip --quiet -9r ../../../../lambda.zip .
 RUN cd grapl-dgraph-ttl && zip -g ../lambda.zip app.py
+RUN mkdir -p dist/grapl-dgraph-ttl && cp lambda.zip dist/grapl-dgraph-ttl/lambda.zip
 
 FROM grapl/grapl-python-deploy AS grapl-dgraph-ttl
 USER grapl
