--- a/src/python/engagement-creator/Dockerfile
+++ b/src/python/engagement-creator/Dockerfile
@@ -7,6 +7,7 @@ COPY --from=grapl/grapl-analyzerlib-python-build /home/grapl/venv venv
 RUN /bin/bash -c "source venv/bin/activate && cd engagement-creator && pip install ."
 RUN zip --quiet -9r lambda.zip venv/lib/python3.7/site-packages/
 RUN zip -g lambda.zip engagement-creator/src/engagement-creator.py
+RUN mkdir -p dist/engagement-creator && cp lambda.zip dist/engagement-creator/lambda.zip
 
 FROM grapl/grapl-python-deploy:latest AS grapl-engagement-creator
 USER grapl
